Home page with links to other pages

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <a class="nav-link" href="#">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">EFFECTS</a>
+        <a class="nav-link" href="effect.html">EFFECTS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">CAUSES</a>
+        <a class="nav-link" href="page2.html">CAUSES</a>
     </ul>
   </div>
 </nav>
