--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="nav-link" href="#">HOME</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="effect.html">EFFECTS</a>
+        <a class="nav-link" href="Effect.html">EFFECTS</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="page2.html">CAUSES</a>
