--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="nav-link" href="Effect.html">EFFECTS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="page2.html">CAUSES</a>
+        <a class="nav-link" href="page2.html">ADDITIONAL INFO</a>
     </ul>
   </div>
 </nav>
