--- a/page2.html
+++ b/page2.html
@@ -83,14 +83,14 @@
                         <div class="column 2/3">
                             <select name="find-us" id="find-us">
                                 <option value="friends" selected>Friends</option>
-                                <option value="search">Search engine</option>
-                                <option value="ad">Advertisement</option>
+                                <option value="search"> Search engine </option>
+                                <option value="ad"> Advertisement</option>
                             </select>
                         </div>
                     </div>
                     <div class="row">
                         <div class="column 1/3">
-                            <label>Newsletter?</label>
+                            <label>Newsletter</label>
                         </div>
                         <div class="column 2/3">
                             <input type="checkbox" name="news" id="news" checked> Yes, please
