--- a/page2.html
+++ b/page2.html
@@ -6,9 +6,9 @@
                 <div class="row">
                     <img src="img/2faces.jpeg"  alt="GlobalWarming">
                         <li><a href="#features">Home</a></li>
-                        <li><a href="#works">About Us</a></li>
-                        <li><a href="#cities">Contact Us</a></li>
-                        <li><a href="#plans">Additional Information</a></li>
+                        <li><a href="#work">About Us</a></li>
+                        <li><a href="#places">Contact Us</a></li>
+                        <li><a href="#Information">Additional Information</a></li>
                 </div>
             </nav>
             <div class="main-text">
@@ -83,8 +83,8 @@
                         <div class="column 2/3">
                             <select name="find-us" id="find-us">
                                 <option value="friends" selected>Friends</option>
-                                <option value="search"> Search engine </option>
-                                <option value="ad"> Advertisement</option>
+                                <option value="search"> Search  </option>
+                                <option value="ad"> Add</option>
                             </select>
                         </div>
                     </div>
@@ -135,6 +135,7 @@
                 <p>
                     Copyright &copy; 2019 by Global Warming.
                 </p>
+                <p> Global Warming </p>
             </div>
         </footer>
     </body>  
